tooling/nargo_cli/tests/snapshots/execution_failure/u128_mul_wrapping_overflow/execute__tests__comptime_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: Attempt to multiply with overflow
  ┌─ src/main.nr:6:5
  │
6 │     a * b
  │     -----
  │

Error interpreting main function
